# trello-cli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/trello_cli/: __init__.py  cli.py  client.py  config.py
tests/: test_client.py  test_config.py
